# django-pgviews-redux

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: build.yml  check.yml  pre_commit.yml  secret_scanning.yml
django_pgviews/: __init__.py  apps.py  checks.py  compat.py  dependencies.py  exceptions.py  managers.py  models.py  querysets.py  refresh.py  signals.py  view.py
django_pgviews/db/: __init__.py  fields.py
django_pgviews/db/migrations/: autodetector.py  operations.py
django_pgviews/db/sql/: compiler.py  query.py
django_pgviews/management/commands/: clear_pgviews.py  makemigrations.py  migrate.py  refresh_pgviews.py  sync_pgviews.py
django_pgviews/management/operations/: _utils.py  clear.py  create.py  create_materialized.py
doc/: conf.py
tests/: requirements.txt  test_dependencies.py  test_refresh.py
tests/db/: test_autodetector.py  test_operations.py
tests/test_project/: routers.py  wsgi.py
tests/test_project/multidbtest/: models.py  routers.py  test_multiple_databases.py  tests.py
tests/test_project/multidbtest/migrations/: 0001_initial.py  0002_auto_20251223_1030.py
tests/test_project/schemadbtest/: models.py  test_schemas.py  tests.py
tests/test_project/schemadbtest/migrations/: 0001_initial.py  0002_auto_20251223_1028.py
tests/test_project/settings/: __init__.py  base.py  ci.py
tests/test_project/test_project/: wsgi.py
tests/test_project/test_project/multidbtest/: models.py  routers.py  tests.py
tests/test_project/test_project/settings/: base.py  ci.py
tests/test_project/test_project/viewtest/: models.py  tests.py
tests/test_project/viewtest/: models.py  test_views.py  tests.py  tests_views.py
tests/test_project/viewtest/migrations/: 0001_initial.py  0002_auto_20251223_1028.py
